updated at: 2023-04-25 18:35, Mojo hands of Gentlemen LMEE Remix - ばりさうんど - BOOTH

--- a/VRChat/18/1092818.html
+++ b/VRChat/18/1092818.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4ovvVJUDxNFJ22+3oM9qz7u6EpX6/0zAzs5biuQUojE="></script>
+    "yVuisqLBm+12qTPuKuPcETKGRTzFnDuwM366ZhxyYyY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Mojo hands of Gentlemen LMEE Remix","description":"VRChat、紳士Force拠点であるClub.DelicのワールドBGMをRemixした楽曲です。\n\n原曲、Mojo hands of Gentlemenは紳士ForceのYAMADA(@yamada_is_aniki)作のオリジナル楽曲です。\n\n\n・禁止事項\nこの楽曲を許諾なく賃貸業に使用すること\n個人の範囲を超える目的で使用すること\nおよびネットワーク等を通じて送信できる状態にすること","url":"https://booth.pm/ja/items/1092818","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/288a298e-56f8-4e37-a187-fa6b63593237/i/1092818/118d28c0-bd64-4ca9-97a9-68fc43174155_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4ovvVJUDxNFJ22+3oM9qz7u6EpX6/0zAzs5biuQUojE="></script>
+    nonce="yVuisqLBm+12qTPuKuPcETKGRTzFnDuwM366ZhxyYyY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1092818/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               72
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1092818/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               72
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
