--- a/VRChat/77/1092677.html
+++ b/VRChat/77/1092677.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dsKntL/o3q9V3g+mPD6BUbhJpyEVzdr7WrSWncDwZx0="></script>
+    "0WWO22r07Gl+zzt+wVqzHwBDielj9I3NB3K4lNOqAhs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル「ヴァンパイアウィング」","description":"VRChatアバターモデル向きに作られた悪魔の羽の３Dモデルです。VRChat以外にもゲームの製作やVTuberの動画配信の演出などご自由にご利用ください。\nzipで解凍されたフォルダには「.unitypackage」形式のファイルと「readme」が同梱されています。\n\nこのモデルにはまんまるシェーダー1_3が使用されています。\nバージョンが1_3より古い場合にも同様、導入してださい。\n\nテクスチャを改変しなくてもマテリアルカラーを変えるだけでカンタンに色を変えられることができ、アニメチックなモデルになじむ作りになっているのが特徴です。\n（使用例画像に使われている３Dモデル「キッシュ」は同梱されていません）\n\n▽面数は両翼で492です、VRChatのポリゴン数制限にご注意ください。\n\n============================================================\n・更新\n2018/12/02\n　VampireWing.prefabにアニメーターコントローラが入っていなかったのを修正。\n　MnMrShader1_3.zipをフォルダ内から削除し、代わりにパッケージにシェーダーを同梱させました。","url":"https://booth.pm/ja/items/1092677","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/eac26deb-f8eb-4293-8010-904b0d088bf4/i/1092677/26883018-f45d-4c0f-845a-03be34357d08_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dsKntL/o3q9V3g+mPD6BUbhJpyEVzdr7WrSWncDwZx0="></script>
+    nonce="0WWO22r07Gl+zzt+wVqzHwBDielj9I3NB3K4lNOqAhs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1092677/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               137
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1092677/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               137
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
