--- a/VRChat/75/1092275.html
+++ b/VRChat/75/1092275.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zC+8/V2hFZ0pMkPAhpMA7uOmBGevNzr66nZPA1cCho0="></script>
+    "X0OHmwtNW72eVxFJRioff1Lwul9aqAzLjVrpmhuHu0Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"揺れる油揚げ　ダイナミックボーン設定済み","description":"■VRchat等で使用することを想定して作られた油揚げです\n\n■ダイナミックボーンの設定を予めしておきました\n\n■ガバが目立ちます\n\n■ポリゴン数：768\n\n■細かいことVRchat推奨　改造可　商用利用可　\n\n■禁止事項：自作発言（改造品含む）\n\n※本製品は油揚げのみです。右近ちゃんや神社は付属しません。","url":"https://booth.pm/ja/items/1092275","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/565e6dcd-600c-4884-8a13-2faabbfd8cdf/i/1092275/f7f858a1-eeda-4e88-bd55-adf526b06a9d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zC+8/V2hFZ0pMkPAhpMA7uOmBGevNzr66nZPA1cCho0="></script>
+    nonce="X0OHmwtNW72eVxFJRioff1Lwul9aqAzLjVrpmhuHu0Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1092275/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1092275/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
