--- a/VRChat/46/1092046.html
+++ b/VRChat/46/1092046.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kke1trfvmDgPX2dqKDceJc2Y1K2+gGS7fZHYa2W/2Qw="></script>
+    "BLCkF4Sw/K5uVw9Ps6HramqCBOSHo3S04j2WfUOmM4c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け3Dアバター】もずバグ　byもずくん","description":"もずくんの　もずバグ\n作った人　もずくん　@mozukuumauma\n　（Twitterで報告もらえると超嬉しいです）\n2018-11-14　投稿\n\n■事前準備してほしいもの\n　VRCSDK\n\n■内容物\n　本体　－　FBXファイル　テクスチャ\n　Unitypackage\n　　パッケージ内\n　　　マテリアル5個\n　　　まんまるシェーダー1.2適応済　　　　作者様　@Mini_9321_VR\n　　　アニメーションオーバーライド5種\n　　　上記設定済Prefab同梱済　これを使ってね\n　　　\n■特徴\n　△9546\n　Lip Sync15種\n　表情5種　（頭上に記号が出ます）\n　手と足にトレイルレンダラーが仕込まれていてダンス等できれいに映えます\n　　おすすめの商品を宣伝です　初心者向けのトレイルレンダラーです\n　　作者も使ってます\n　　https://booth.pm/ja/items/1057062\n※※※※超大事な事※※※※\n【フルボディトラッキング対応してます　逆にフルトラ推奨モデルです】\n　通常VRとデスクトップだと肩のボーンが動き始めて肩がズルズル動くんですもう私諦めます！\n\n■キャラ紹介\n作者がゲーム内で使ってたキャラをイメージしたモデルです\nもずバグって名前は呼ばれ方であってちゃんとした個体識別名ではないので\nみなさん好きに名前をつけてあげて下さい\n\n基本VRchat前提で構成しています。\nバーチャルキャスト等の他のVRコンテンツでの利用も問題ありません\nVRM形式への変換は自分でお願いします\n\n以下テンプレ\n著作表示　○　（著作ってより、もずくんの使ったよって報告が欲しいだけです）\n商用利用　○　（フルスクラッチだよ！）\n収益　○　（収益化された配信にもどんどん使ってくれ）\n色変えや改変　○　（どんどんやっていいの作って）\nパーツ流用　○　（購入者は好きにバラして改変して使っていけ）\n再配布　×　（VRCアバターペデスタルも不可）\nR18-18G　○　（どう使うねん）\n政治や宗教要素　×　（攻撃的な要素には使ってほしくない）\n取材や雑誌掲載TV等に映るの　○　（知らぬ間にって場合もあるので気にしないでいいのよ）\nアバター利用でのVtuber活動　○　（逆にする人居るなら呼んでほしいレベル）\nわからんことあったらTwitterでリプくれ\nアバターアップロードとかの方向性の質問は知らん　それは管轄外だ","url":"https://booth.pm/ja/items/1092046","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/e2c0f6c5-5ba0-4d14-8298-1e93a6e970f3/i/1092046/da3ae1bc-e1e4-4332-8fb7-87b1385b89a6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kke1trfvmDgPX2dqKDceJc2Y1K2+gGS7fZHYa2W/2Qw="></script>
+    nonce="BLCkF4Sw/K5uVw9Ps6HramqCBOSHo3S04j2WfUOmM4c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1092046/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1092046/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
