--- a/VRChat/10/1048410.html
+++ b/VRChat/10/1048410.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BEbHDqKCwTlq/hZEt1rRFRTzC6qEUAReBdqGJRwoaGc="></script>
+    "84Lo80nQIeRduwcA/ZgSE/GUuf2yA3JjoqJlVfCB6TU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル【ひよこ】","description":"VRChat向け3Dモデル【ひよこ】です。\nポリゴン数は13674です。\nVRchatでの使用を想定して販売していますが、ゲームや配信、商用利用等にも使えます。\n二次配布は改変したものも含め禁止です。（VRCのアバターペデスタル含む）\n\n内容\n・unitypackage(モデルデータ（FBXとPNG）とprefabデータ)\n・モデルデータ（FBX+PNG）\n\n\nIt is a 3D model for VRChat 【chick】.\nThe number of polygons is 13674.\nAlthough it sells it assuming use with VRchat, it can also be used for games, distribution, commercial use etc.\nSecondary distribution is prohibited, including those that were modified. (Including avatar pedestal of VRC)\n\nContents\n· Unitypackage (model data (FBX and PNG) and prefab data)\n· Model data (FBX + PNG)\n\n連絡先\n@jimtugy（Twitter）","url":"https://booth.pm/ja/items/1048410","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/472e2c7e-f67e-4208-a492-0fe806b258e0/i/1048410/61ac34ce-5660-42e3-b54a-edfc95925a80_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BEbHDqKCwTlq/hZEt1rRFRTzC6qEUAReBdqGJRwoaGc="></script>
+    nonce="84Lo80nQIeRduwcA/ZgSE/GUuf2yA3JjoqJlVfCB6TU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1048410/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1048410/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               77
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
