--- a/VRChat/32/1091932.html
+++ b/VRChat/32/1091932.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0+ASYl2I8AwWia6gjxKsCcMBjymlerlf4+nvEgv1kBg="></script>
+    "bbrpG3n426R8lusf5fh2hHIlEWMann5zZRBhzIoFMGg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"神社の赤鳥居","description":"神社にある赤鳥居です。\n出品者の初作品となります！\n\nVRChatやVキャス等のVRコンテンツで使用することを想定しています。\n\n■使い方\nダウンロードフォルダに入っているfbxファイルをUnityに入れることで使用できます。\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布\nその他製作者が不適切と判断したもの\n\n■許可事項\n改造","url":"https://booth.pm/ja/items/1091932","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a078e889-f002-4368-8380-bca47499c70b/i/1091932/1452b256-66a2-44ca-ab70-9a500a8c41b8_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0+ASYl2I8AwWia6gjxKsCcMBjymlerlf4+nvEgv1kBg="></script>
+    nonce="bbrpG3n426R8lusf5fh2hHIlEWMann5zZRBhzIoFMGg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1091932/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1091932/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
