updated at: 2023-04-25 18:39, 水着【VRChat向け】 - 白亜重工 - BOOTH

--- a/VRChat/63/1089763.html
+++ b/VRChat/63/1089763.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "j/FqkRMsWrZhL44NtMMbihF5K9cunG+HSZxl1k1Il7c="></script>
+    "1pP15Lc/CvXMtXpIPK6/6OVdevG78C37qEv8gE7ycqo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"水着【VRChat向け】","description":"夏のための水着です！まだ夏は終わっていません！夏を満喫しましょう！\nUVが付属しているのでお好みの柄を作ることができます！\n\n自分のアバター用に製作された物なのでBlender等のモデリングソフトでサイズ調整が必要だと思います\n一応ウェイトが塗ってありますが、調整が必要だと思います\n以下規約に従った上で、ご自由にお使いください！\n改変、商用利用は可です！\n\nー利用規約ー\n当データの著作権は製作者である白亜重工(白雪)に帰属します\n●禁止事項\n当データ(改変した場合も含む)の再配布、転載\n●免責事項\n当データを使用して発生したトラブルに一切の責任を製作者は負いません\nご利用は自己責任でお願いします\n\nー製品内容ー\n・blendデータ\n・fbxデータ\nポリゴン数1104(Blender上)\n・UV画像(透過png2048×2048)\n・サンプルテクスチャ2種(png2048×2048)\n・UV画像の説明","url":"https://booth.pm/ja/items/1089763","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1089763/9071074a-6463-4431-b0d8-b99ba5007beb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="j/FqkRMsWrZhL44NtMMbihF5K9cunG+HSZxl1k1Il7c="></script>
+    nonce="1pP15Lc/CvXMtXpIPK6/6OVdevG78C37qEv8gE7ycqo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1089763/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               208
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1089763/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               208
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
