updated at: 2023-04-25 18:40, 日輪槍【VRChat対応】 - 青えんじ鍛冶屋 - BOOTH

--- a/VRChat/08/1088608.html
+++ b/VRChat/08/1088608.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Dosy0e6XN5SRD5WD33mEJSyMJLj6F79YzXDLLXD7lAU="></script>
+    "GwWyV5nlw2+3SSM9mXY77nW9LPAAHjo+Rq8P69cCHMY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"日輪槍【VRChat対応】","description":"フルスクラッチの槍「日輪槍(にちりんそう)」です\n\nポリゴン数：1196△\n\nVRChatでの使用を想定しています。\n宝石部分を光らせるようなパーティクル同封です。","url":"https://booth.pm/ja/items/1088608","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/1088608/28b47ec3-0903-461f-abd3-c840f7df957f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Dosy0e6XN5SRD5WD33mEJSyMJLj6F79YzXDLLXD7lAU="></script>
+    nonce="GwWyV5nlw2+3SSM9mXY77nW9LPAAHjo+Rq8P69cCHMY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1088608/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1088608/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
