updated at: 2023-04-25 18:40, 【Vlend企画】ギアスタンプ - 角落工房 - BOOTH

--- a/VRChat/55/1087955.html
+++ b/VRChat/55/1087955.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MbZXh8ujHo2JC+Y+L4VLawSGdFUjb8+DiCrAN0fDVH0="></script>
+    "ydR+SNAzxeuzVfaHkjfVmar1inkqnxGxXn59Ufby9gI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Vlend企画】ギアスタンプ","description":"VtuberとVcreaterのコラボ企画「Vlend　もしも！あのVtuberが武器を持ったら？」にて制作させていただいたモデルです。\nすみっこは動く城のフィオさんのお題「スチームパンキーな巨大槌」をテーマに制作しました！\n歯車グルグル回って、煙モクモク出てます。\n歯車焼印を入れたい時にご使用ください。\n","url":"https://booth.pm/ja/items/1087955","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/142a7e1a-9373-4898-920f-9482feb5132b/i/1087955/c4383084-0368-4577-a62e-6fcf6df4355e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MbZXh8ujHo2JC+Y+L4VLawSGdFUjb8+DiCrAN0fDVH0="></script>
+    nonce="ydR+SNAzxeuzVfaHkjfVmar1inkqnxGxXn59Ufby9gI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1087955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1087955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
