updated at: 2023-04-25 18:41, ウインクで目からバチコーンセット【Unity Particle】 - じょにさんの配布物 - BOOTH

--- a/VRChat/95/1086995.html
+++ b/VRChat/95/1086995.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LmVZ4qFrXiR9wJBMa57JRCHuBWkpIGuok958mX02zr4="></script>
+    "4t96INyijwI3y2bIT1q0Z0j2d6pf1E7m9dH6yfPWVuE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ウインクで目からバチコーンセット【Unity Particle】","description":"星とハートが飛び出すパーティクルです。\n\nウインクのアニメーションに合わせて、目からバチコーンしましょう。\n\n改変、商用等、自由にご利用いただけます。","url":"https://booth.pm/ja/items/1086995","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1086995/7d425f9c-9599-47fe-992c-8150bb073ce8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LmVZ4qFrXiR9wJBMa57JRCHuBWkpIGuok958mX02zr4="></script>
+    nonce="4t96INyijwI3y2bIT1q0Z0j2d6pf1E7m9dH6yfPWVuE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1086995/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              79
+                              78
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1086995/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              79
+                              78
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
