updated at: 2023-04-25 18:46, VRChat用オリジナルモデル「Jack」 - たまごパック - BOOTH

--- a/VRChat/72/1078772.html
+++ b/VRChat/72/1078772.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fJxwRvnqshmaGP6R5f5VNkLwcYaUJMDfSrtYozvU1mQ="></script>
+    "daZiPJ/aNgfaaIe8KS3TBnVbzxe5gUBdpMl/VWgRpPI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用オリジナルモデル「Jack」","description":"●VRChat想定Humanoid対応のオリジナル3Dモデル「Jack」です。\n14102ポリゴン、フルトラッキング動作確認済みです。\n\nVRChatのハロウィンコンテストで入賞しました！\n\n※本モデル、アクセサリはUTS2.0、DynamicBoneに対応しております。※\n事前にユニティちゃんトゥーンシェーダー2.0、VRCSDKをインポートした状態でUnitypackageをインポートしてください。\n\n\n\n―【UTS2.0配布サイト】―\nhttp://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n\n制作者【卵のたま】\n\n","url":"https://booth.pm/ja/items/1078772","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"3000"},"image":"https://booth.pximg.net/c/620x620/f1d7affa-4025-493b-ac2a-c8b1c13ca462/i/1078772/af7ba81a-5a49-4804-83ce-d416eefd6172_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fJxwRvnqshmaGP6R5f5VNkLwcYaUJMDfSrtYozvU1mQ="></script>
+    nonce="daZiPJ/aNgfaaIe8KS3TBnVbzxe5gUBdpMl/VWgRpPI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1078772/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               34
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1078772/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               34
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
