updated at: 2023-04-25 18:47, 【無料】コルクボード【Unitypackage】 - M.G.R雑貨店 - BOOTH

--- a/VRChat/86/1079786.html
+++ b/VRChat/86/1079786.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QFPke5GMbjnGZVuwFdarEyMUG+5O3wHVt76IPx4vqw8="></script>
+    "YQW4OBwqPIKo5VDatHKqAyzND3NoPckIjkO7B3ps/WE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】コルクボード【Unitypackage】","description":"コルクボードです。\nunitypackageでの配布です。\n\nこの商品を利用したことで発生する損失やトラブル等に一切の責任を負いません。\nそれ以外は商用でもなんでもお好きに使ってください。\n\n大切な写真を飾ろう！\n\n2022/08/04\n数種類のコルクボードを追加しました。(掲載画像の3枚目以降)","url":"https://booth.pm/ja/items/1079786","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1079786/5ff23a2b-cfa0-45f8-b009-cdd3340e27be_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QFPke5GMbjnGZVuwFdarEyMUG+5O3wHVt76IPx4vqw8="></script>
+    nonce="YQW4OBwqPIKo5VDatHKqAyzND3NoPckIjkO7B3ps/WE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +140,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -183,7 +185,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1079786/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               558
@@ -198,14 +200,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1079786/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               558
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
